fix(drive): Corrige autenticação com a API do Google Drive